# perf-oriented-dev

./: .gitignore  flake.nix  ssca_massif.out
benchmarking_python/: Profiler.py  README.md  SlurmJob.py  TimeProfiler.py  benchmark.py  benchmark_a.py  benchmark_b.py  confidence_interval.py
benchmarking_python/data/: delannoy.json  delannoy_load.json  evaluate.py  filegen.json  filegen_load.json  mmul.json  mmul_load.json  nbody.json  nbody_load.json  qap_chr15.json  qap_chr15_load.json
larger_samples/npb_bt/: CMakeLists.txt
larger_samples/ssca2/: CMakeLists.txt
small_samples/: CMakeLists.txt
small_samples/qap/: execution_times.csv  run_n_mean_variance.sh
solutions/01/: README.md  execution_times_lcc.csv  job.sh  lcc.sh  local.sh
solutions/02/: README.md
solutions/03/: README.md  a_lcc.txt  a_local.txt  c_lcc.txt  c_local.txt  job.sh  s_lcc.txt  s_local.txt
solutions/04/: README.md  massif.out.np_bt_a  massif.out.ssca2
solutions/05/: README.md  plotting_a.py  plotting_b.py
solutions/05/ssca2/: CMakeLists.txt
solutions/06/: README.md
solutions/06/mmul/: mmul.c
solutions/07/: CMakeLists.txt  README.md  plotting.py
solutions/08/: README.md
